<resources>
    <string name="app_name">Grow+</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">"  Password"</string>
    <string name="nome_de_utilizador">"  Nome de utilizador"</string>
    <string name="login">Login</string>
    <string name="login_efetuado">Login Efetuado</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="bom_ver_voc">Bom ver você!</string>
    <string name="registar_se">Registar-se</string>
    <string name="ainda_nao_membro">Ainda nao é membro?</string>
    <string name="password1">Password</string>
    <string name="nome_do_utilizador">Nome do utilizador</string>
    <string name="emal">Email</string>
    <string name="repetir_password">Repetir Password</string>
    <string name="registar">Registar</string>
    <string name="ja_membro">Já é membro?</string>
    <string name="registe_se">Registe-se</string>
    <string name="registado_com_sucesso">Registado com sucesso</string>
    <string name="editarr_conta">Editar Conta</string>
    <string name="ajudar_o_planeta">Ajudar o Planeta</string>
    <string name="_17_ods">17 ODS</string>
    <string name="defenicoes">Defenições</string>
    <string name="sobre">Sobre</string>
    <string name="e_requerido_um_nome_de_utilizador">É requerido um nome de utilizador</string>
    <string name="e_requerido_um_email">É requerido um email</string>
    <string name="e_requerido_uma_password">É requerido uma password</string>
    <string name="confirme_password">Confirme a password</string>
    <string name="as_passwords_nao_coincidem">As passwords não coincidem</string>
    <string name="a_password_tem_de_ter_mais_de_6_caracters">A password tem de ter > 6 caracteres</string>
    <string name="erro">Erro!</string>
    <string name="usuario_criado">Usuário criado</string>
    <string name="conta">Conta</string>
    <string name="grow_plus">Grow+</string>
    <string name="logout">App Logout</string>
    <string name="login_efetuado_com_sucesso">Login efetuado com sucesso</string>
    <string name="entrar">Entrar</string>
    <string name="vamos_aprender">Vamos aprender!</string>
    <string name="redefinir">Redefinir</string>
    <string name="esqueceu_a_password">Esqueceu a password?</string>
    <string name="redefinir_password">Redefinir Password</string>
    <string name="enviar_email">Enviar email</string>
    <string name="foi_enviado_um_email_de_verificacao">Foi enviado um email de verificação para a sua conta!</string>
    <string name="foi_enviado_linl_para_redefinir_password">Foi enviado um link para o seu email para redefinir a password!</string>
    <string name="utilizadores">Utilizadores</string>
    <string name="usuario">Usuário:</string>
    <string name="sobre_texto_um">A GrowPlus é uma aplicação desenvolvida com fundamentos nos ojetivos de desenvolvimento sustentável e tem como objetivo principal ajudar a alcançar todos os 17 objetivos atravéz de quizzes e informações que ajudam a sensibilizar as pessoas a ajudar para que estes objetivos senjam cumpridos, estes deveram ser atualizadas constantemente para que o utilizador tenha sempre novos quizzes e informações relativas aos ODS. Não terá como foco todos os utilizadores disponiveis a contruibuir mas sim tamém aqueles que estão dispostos a aprender mais culturalmente e contribuir para ajudar o planeta a ser um lugar mais limpo e sustentavel.</string>
    <string name="sobre_titulo">Acerca da GrowPlus:</string>
    <string name="necessita_de_ajuda">Necessita de ajuda?</string>
    <string name="contacte_a_nossa_equipa_via_email">Contacte a nossa equipa via email:</string>
    <string name="ajudar_a_tornar_o_planeta_um_lugar_melhor">Ajudar a tornar o Planeta um lugar melhor:</string>
    <string name="_1_plante_pelo_menos_uma_rvore">1. Plante, pelo menos, uma árvore:</string>
    <string name="todos_podemos_contribuir_com_pequenos_gestos_no_dia_a_dia_para_proteger_o_ambiente_em_casa_na_escola_na_tua_terra_h_com_certeza_muito_que_podes_fazer_pelo_planeta">Todos podemos contribuir com pequenos gestos no dia a dia para proteger o ambiente. Em casa, na escola, na tua terra, há com certeza muito que podes fazer pelo planeta.</string>
    <string name="talvez_voc_j_tenha_feito_isso_uma_ou_dezenas_de_vezes_mas_nunca_demais_o_plantio_pode_ser_feito_em_uma_rea_que_precisa_ser_recuperada_ou_em_seu_pr_prio_quintal_uma_ideia_interessante_plantar_uma_rvore_frut_fera_al_m_de_ter_um_alimento_fresco_ao_seu_alcance_voc_tamb_m_atrair_muitos_p_ssaros_e_ouvir_o_canto_das_aves_sempre_faz_bem">Talvez você já tenha feito isso uma ou dezenas de vezes, mas nunca é demais. A plantação pode ser feita numa área que precisa ser recuperada ou no seu próprio quintal. Uma ideia interessante é plantar uma árvore frutífera. Além de ter um alimento fresco ao seu alcance, você também vai atrair muitos pássaros, e ouvir o canto das aves sempre faz bem.</string>
    <string name="_2_cuide_do_seu_pr_prio_lixo">2. Cuide do seu próprio lixo:</string>
    <string name="d_a_destina_o_adequada_para_os_res_duos_que_voc_produzir_mesmo_que_n_o_exista_um_sistema_p_blico_de_coleta_seletiva_na_sua_regi_o_separe_seu_lixo_e_leve_os_recicl_veis_a_uma_cooperativa_ou_centro_de_coleta_a_parte_org_nica_pode_ser_transformada_em_adubo_para_ajudar_a_sua_rvore_ou_horta_a_crescerem_com_mais_sa_de">Dê a destinação adequada para os resíduos que você produzir. Mesmo que não exista um sistema público de reciclagem seletiva na sua região, separe o lixo e leve os recicláveis a uma cooperativa ou centro de reciclagem. A parte orgânica pode ser transformada em adubo para ajudar a sua árvore ou horta a crescerem com mais saúde.</string>
    <string name="_3_evite_o_desperd_cio">3. Evite o desperdício:</string>
    <string name="um_dos_grandes_males_do_mundo_o_desperd_cio_em_termos_de_alimento_aproximadamente_1_3_de_tudo_o_que_produzido_vai_parar_no_lixo_mas_para_ter_um_mundo_melhor_tamb_m_importante_atentar_ao_desperd_cio_de_dinheiro_por_exemplo_planeje_os_seus_gastos_isso_evitar_problemas_nas_finan_as_pessoais_e_por_mais_incr_vel_que_pare_a_tamb_m_impactar_a_economia_nacional">Um dos grandes males do mundo é o desperdício. Em termos de alimento, aproximadamente 1/3 de tudo o que é produzido vai parar no lixo. Mas, para ter um mundo melhor, também é importante atentar ao desperdício de dinheiro, por exemplo. Planeje os seus gastos, isso evita problemas nas finanças pessoais e, por mais incrível que pareça, também impactará a economia nacional.</string>
    <string name="o_padr_o_de_consumo_imposto_principalmente_pela_m_dia_diz_que_as_pessoas_s_o_definidas_por_seus_bens_no_entanto_essa_cultura_de_comprar_desenfreadamente_o_jeito_mais_f_cil_de_destruir_o_meio_ambiente_para_fabricar_uma_cal_a_jeans_s_o_necess_rios_at_15_mil_litros_de_gua_fora_outras_mat_rias_primas_tudo_o_que_compramos_reflete_em_algum_tipo_de_impacto_ambiental_portanto_compre_o_necess_rio">O padrão de consumo imposto, principalmente pela mídia, diz que as pessoas são definidas pelos seus bens. No entanto, essa cultura de comprar muitas coisas é o jeito mais fácil de destruir o meio ambiente. Para fabricar umas simples calças são necessários até 15 mil litros de água, fora outras matérias-primas. Tudo o que compramos reflete em algum tipo de impacto ambiental, portanto, compre apenas o necessário.</string>
    <string name="_4_pense_e_repense_antes_de_comprar">4. Pense e repense antes de comprar:</string>
    <string name="_5_cuide_das_pessoas_e_dos_animais">5. Cuide das pessoas e dos animais:</string>
    <string name="fa_a_o_bem_a_quem_est_pr_ximo_de_voc_independente_de_quem_seja_as_boas_a_es_s_o_contagiosas_imagine_como_o_mundo_seria_melhor_com_todas_as_pessoas_trocando_gentilezas_cuide_tamb_m_dos_animais_se_est_ao_seu_alcance_tomar_conta_de_um_animal_dom_stico_fa_a_isso_com_carinho_se_voc_pode_ajudar_a_preservar_uma_rea_ou_apoiar_causas_de_defesa_dos_animais_fa_a_tamb_m_o_mais_importante_de_tudo_a_inten_o_e_a_vontade_de_fazer_o_bem_sem_olhar_a_quem">Faça o bem a quem está próximo de você, independente de quem seja. As boas ações são contagiosas. Imagine como o mundo seria melhor com todas as pessoas a trocar gentilezas? Cuide também dos animais. Se voce toma conta de algum animal doméstico, faça isso com carinho. Se você poder ajudar a preservar uma área ou apoiar causas de defesa dos animais, faça também. O mais importante de tudo é a intenção e a vontade de “fazer o bem, sem olhar a quem”.</string>
    <string name="_6_vote_consciente_acompanhe_e_cobre_a_es_dos_candidatos">6. Vote consciente, acompanhe e cobre ações dos candidatos:</string>
    <string name="essa_uma_das_dicas_mais_importantes_a_democracia_permite_que_a_popula_o_eleja_seus_representantes_aproveite_esta_oportunidade_para_escolher_candidatos_que_tenham_valores_respeit_veis_e_projetos_que_sejam_usados_realmente_em_benef_cios_da_sociedade_ap_s_as_elei_es_acompanhe_o_que_est_sendo_feito_e_cobre_se_for_necess_rio_isso_vale_para_todos_os_cargos_pol_ticos">Essa é uma das dicas mais importantes. A democracia permite que a população eleja o seu representante. Aproveite esta oportunidade para escolher candidatos que tenham valores respeitáveis e projetos que sejam usados realmente em benefícios da sociedade. Após as eleições, acompanhe o que está a ser feito e proteste se for necessário. Isso conta para todos os cargos políticos.</string>
    <string name="atente_ao_consumo_desses_bens_na_sua_casa_sempre_existe_um_cuidado_extra_que_pode_ser_feito_para_evitar_o_desperd_cio_algumas_sugest_es_s_o_apague_sempre_as_luzes_de_ambientes_vazios_diminua_o_tempo_no_banho_escolha_eletrodom_sticos_e_l_mpadas_eficientes_evite_o_uso_de_ar_condicionado_lave_e_passe_toda_a_roupa_de_uma_s_vez">Fique atento ao consumo desses bens na sua casa. Existe sempre um cuidado extra que pode ser feito para evitar o desperdício. Algumas sugestões são: apagar sempre as luzes de ambientes vazios, diminuir o tempo no banho, escolher eletrodomésticos e lâmpadas eficientes, evitar o uso de ar-condicionado, lavar e passar toda a roupa de uma só vez.</string>
    <string name="_7_economize_gua_e_energia">7. Economize água e energia:</string>
    <string name="_8_cuide_do_local_onde_voc_mora">8. Cuide do local onde você mora:</string>
    <string name="highscores">HighScores</string>
</resources>